examples/test/testpolicy18328.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18328
  namespace: namespace221
spec:
  podSelector:
    matchLabels:
      key1: value14
      key16: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value32
          key30: value47
          key18: value17
      podSelector:
        matchLabels:
          key28: value16
          key12: value22
          key25: value5
